newest update connected the DB!!!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=${AZURE_POSTGRESQL_URL}
+spring.datasource.username=${AZURE_POSTGRESQL_USERNAME}
+spring.datasource.password=${AZURE_POSTGRESQL_PASSWORD}
