--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=${AZURE_POSTGRESQL_URL}
 spring.datasource.username=${AZURE_POSTGRESQL_USERNAME}
 spring.datasource.password=${AZURE_POSTGRESQL_PASSWORD}
+spring.jpa.hibernate.ddl-auto= update
