--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>ffff</artifactId>
+	<artifactId>Test1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ffff</name>
+	<name>Test1</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
