newest update connected the DB!!! take5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.datasource.url=${AZURE_POSTGRESQL_URL}
-spring.datasource.username=${AZURE_POSTGRESQL_USERNAME}
-spring.datasource.password=${AZURE_POSTGRESQL_PASSWORD}
+spring.datasource.url=jdbc:sqlserver://tommyspringserver.database.windows.net:1433;database=SpringBootDatabase;user=admin2@tommyspringserver;password=TommyAZ01;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30
 
 spring.jpa.hibernate.ddl-auto= update
